# BRING

./: .bring.env  .bring.env.example  .env.example  .gitignore  README.md  bring_cli.py  bring_cli_support.py  bring_settings.py  pyproject.toml  requirements.txt  setup.py  test_integration.py  test_narrative_system.py  world_cli.py  world_config.py
llm_gateway/: .llm_gateway.env.example  __init__.py  cache.py  client.py  config.py  exceptions.py  retry.py  settings.py  utils.py
memory/: __init__.py  actor.py  chronicler.py  config.py  database.py  director.py  engine.py  extraction.py  gateway_adapter.py  graph.py  maintenance.py  ontology.py
mushoku_tensei/: README.md  extraction_v2.py  graph_builder.py  ingest_v2.py  ontology_extended.py  sample_pipeline.py  segmentation.py  time_parser.py
tests/: __init__.py  test_core.py
world_builder/: builder.py  cli.py  config.py  entity_profile.py  entity_store.py  generator.py  graph_engine.py  graph_manager.py  llm.py  prompts.py
world_core/: __init__.py  event_bus.py  history_manager.py  llm_queue.py  models.py  store.py  utils.py
world_db/: embeddings.pkl  entities.json  npc_state.json  quests.json  roleplay_session_default.json  roleplay_session_mynewchar.json  roleplay_session_newborn.json  timeline.jsonl  world_clock.json  world_frame.json
world_director/: __init__.py  agent_coordinator.py  models.py  newborn_scenario.py  story_arc_manager.py  world_evolver.py
world_engine/: __init__.py  memory_manager.py  models.py  prompt_builder.py  roleplay_engine.py  start_resolver.py
world_explorer/: api.py  branch_manager.py  builder_integration.py  cli.py  config.py  embeddings.py  graph_builder.py  graph_validator.py  loader.py  models.py  name_index.py  navigator.py  requirements.txt  store.py  templates.py
world_intelligence/: __init__.py  cli.py  config.py  duplicate_detector.py  graph_analyzer.py  pipeline.py  recommender.py  relationship_repairer.py  requirements.txt  rule_checker.py  (+2 more)
(+73 files in other folders)
