[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bring-v2"
version = "2.0.0"
description = "Building Rich Interactive Narrative Games - AI-powered platform for persistent fantasy worlds"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "BRING Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Role-Playing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "networkx>=3.1",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]
memory = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
world = "world_cli:main"
world-builder = "world_builder.cli:app"
world-explorer = "world_explorer.cli:app"
world-intelligence = "world_intelligence.cli:app"
world-narrative = "world_narrative.cli:app"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
